docs/tests/parser/control_flow/valid/IfElse.src
fn void test() {
    if (x > 0) {
        return;
    } else {
    }
}
