docs/tests/parser/control_flow/invalid/IfMissingBodyBrace.src
fn void test() {
    if (true) return;
}
